FCL-312 | fix review spacing

--- a/ds_caselaw_editor_ui/sass/includes/_judgment_view_controls.scss
+++ b/ds_caselaw_editor_ui/sass/includes/_judgment_view_controls.scss
@@ -1,6 +1,3 @@
 .judgment-view-controls {
-  @media (min-width: 1500px) {
-    width: 67.5%;
-    margin: 0 auto;
-  }
+  margin: 0 auto;
 }
